samples/_failures_safe/1761260766_680164_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_946244b1.c: In function ‘main’:
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_946244b1.c:155:21: error: expected declaration or statement at end of input
